# app/api/docs/swagger.json
@@ -1449,11 +1449,6 @@
                 "body": {
                     "type": "string"
                 },
-                "payload": {
-                    "description": "Webhook content (arbitrary JSON)",
-                    "type": "object",
-                    "additionalProperties": {}
-                },
                 "subject": {
                     "description": "Email content",
                     "type": "string"
